--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="3.1">
     <context-param>
         <param-name>javax.faces.CONFIG_FILES</param-name>
-        <param-value>/views/faces-config.xml</param-value>
+        <param-value>/WEB-INF/faces-config.xml</param-value>
     </context-param>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
